# discord-gpt

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
app/: main.py
app/services/: chatbot.py  chunk_message.py  discord_client.py  env_man.py
