[tool.poetry]
name = "discord-gpt"
version = "0.1.0"
description = ""
authors = ["Pumidol Leelerdsakulvong <pumidol.l@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.2"
rich = "^13.3.2"
discord-py = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
